--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,8 @@ name: build
 
 on:
   push:
-    branches: [main, next]
+    tags:
+      - '*'
 
 defaults:
   run:
@@ -25,3 +26,39 @@ jobs:
     - name: Build
       run: |
         cmd.exe /c "windows\build.bat"
+    
+    - name: artifact archive folder
+      run: |
+        cmd.exe /c "mkdir netuio"
+        cmd.exe /c "mkdir virt2phys"
+
+    - name: add artifacts to publish
+      run: |
+        cmd.exe /c "xcopy /f "windows/netuio/x64/Release/netuio/netuio/*" "netuio/""
+        cmd.exe /c "xcopy /f "windows/virt2phys/x64/Release/virt2phys/*" "virt2phys/""
+
+    - name: upload Artifact GitHub Action
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: dpdk-windows-drivers
+        path: |
+          netuio/
+          virt2phys/
+        if-no-files-found: error
+
+  release:
+    runs-on: "windows-2022"
+    permissions:
+      contents: write
+
+    needs: build-drivers
+
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: dpdk-windows-drivers
+          path: dpdk-windows-drivers
+      - run: tar acvf dpdk-windows-drivers.zip dpdk-windows-drivers
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: "dpdk-windows-drivers.zip"
